--- a/index.html
+++ b/index.html
@@ -4,23 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="." href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 
-    
-
+    <link rel="icon" type="image/x-icon" href="./public/images/logo.svg">
+    <link href="/src/index.css" rel="stylesheet" />
     <title>Landwind - Tailwind CSS Landing Page</title>
   </head>
-  <body>
+  <body class="bg-white text-black dark:bg-gray-800 dark:text-white">
     <div id="root"></div>
-
-
-
-
-
-  
 
     <script src="https://unpkg.com/flowbite@1.4.1/dist/flowbite.js"></script> 
     <script type="module" src="/src/main.jsx"></script>
-    
-
   </body>
 </html>
